manifests/platform/base/istio/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: default-gateway-cert-secret
    hosts:
    - "*.k8s.kieranbamforth.me"
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  #   hosts:
  #   - "*"
